package lancercalculs;

import calculs.CalculChemins;

import java.io.IOException;

public class LancerCalculsChemins {
    public static void main(String[] args) throws IOException {
        System.out.println("Lancer les calculs des chemins");
        //CalculChemins.ecrireChemins();
    }
}
