package main;

import simulation.CalculVision;

import java.io.IOException;

public class LancerCalculsVision {
    public static void main(String[] args) throws IOException {
        System.out.println("Lancer les calculs de vision");
        CalculVision.ecrireVision();

    }
}
