package outils;

public interface CSVDataset {
}